# quatrix

./: Cargo.toml  README.md  attribution.txt  default.nix  flake.nix  install_linux_client.sh  install_windows_client.sh
.github/workflows/: build.yml
examples/: song_comp.rs
nix/: inputs.nix
src/: board.rs  controls.rs  lib.rs  main.rs  music.rs
src/audio/: mod.rs  music.rs  sfx.rs
src/game/: background.rs  controls.rs  debug.rs  mod.rs  settings.rs  spawn.rs  ui.rs
src/game/board/: dropping.rs  effects.rs  mod.rs  rotate.rs  sprite.rs  state.rs
src/game/ui/: control.rs  mod.rs  multiplier.rs  rank.rs  score_effect.rs
src/logic/: board.rs  error.rs  insertion.rs  mod.rs  score.rs
src/menu/: button.rs  mod.rs  title.rs
