[package]
name = "quatrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.2"
nalgebra = "0.32.5"
thiserror = "1"
rand = "0.8.5"
colorgrad = "0.6.2"
noise = "0.9"
image = "0.24"
strum = { version = "0.26", features = ["derive"] }

[profile.release]
strip = true
lto = true
